Fix footer being hidden on mobile and censor effect not tracking with text

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html {
 
 body {
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     overflow-y: scroll;
     font-family: 'Helvetica', sans-serif;
     background-color: #006CFA;
